pages/style/main_page.css
.about_company_title{
    font-size: 2.7em;
    font-weight: 700;
}

.main_info_call{
    font-size: 1.48em;
    font-weight: 500;
    display: flex;
    flex-direction: row;
}

.main_info_phone_number{
    margin-left: 7px;
}

.main_info_wrapper{
    height: 100vh;
    width:100%;
    padding: -8px -40px 0 6%;
}

.main_info_text{
    margin: 15% 0 0 15%;
    width: 80%;
    transform: scale(1, 1.1);
}

.main_info_img{
    width: 200%;
    height: 95vh !important;
    object-fit: cover;
    clip-path: polygon(45% 0, 110% 0, 30% 200%, 0% 100%);
}

@media screen and (max-width: 1795px){
    .main_info_text{
        margin: 15% 0 0 5%;
    }
    
    .about_company_title{
        font-size: 2em;
    }
    
    .main_info_call{
        flex-direction: column;
    }
    
    .main_info_phone_number{
        margin-left: 0px;
    }
}

@media screen and (max-width: 1200px){    
    .about_company_title{
        font-size: 1.65em;
        font-weight: 800;
    }
    
    .main_info_call{
        font-size: 1em;
    }
}

@media screen and (max-width: 992px){
    .main_info_wrapper{
        flex-direction: column;
    }
    
    .main_info_img{
        clip-path: unset;
        padding-top: 1%;
        object-fit: cover;
        width:100%;
    }
    
    .main_info_call{
        flex-direction: row;
    }
    
    .main_info_text{
        width: 90%;
    }
}

